# payments-platform

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml  main.py
apps/api/: .coverage  .dockerignore  .env.example  Dockerfile  README.md  celerybeat-schedule  celerybeat-schedule-shm  celerybeat-schedule-wal  main.py  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 48dce01f199e_add_card_id_to_issuer_authorizations_.py  637e756014ea_add_payees_and_bills_tables.py  7e06f18e9f3e_add_payments_status_created_at_.py  99a737f3b15d_create_issuer_authorizations_table.py  a1fca4410cc7_create_reconciliation_tables.py  a23cc45d27a7_create_payments_table.py  a7695764b028_init.py  af9db6813014_create_fraud_signals_table.py  ba72d469f03d_create_cardholders_and_cards_tables.py  c48f08c8fb6a_add_decision_created_at_index_to_issuer_.py  d94dd203702d_create_outbox_events_table.py  e6321ede7823_create_reporting_events_table.py  f32f87d29295_create_fraud_signals_table.py
apps/api/app/bills/: models.py  repository.py  router.py  schemas.py  service.py
apps/api/app/fraud/: models.py  repository.py  router.py  schemas.py  service.py
apps/api/app/ledger/: repository.py  schemas.py  service.py
apps/api/app/notifications/: models.py  repository.py  schemas.py  service.py
apps/api/app/outbox/: models.py  repository.py  schemas.py  service.py
apps/api/scripts/: seed.py
apps/api/shared/: exception_handlers.py  exceptions.py  settings.py
apps/api/tests/: conftest.py
apps/api/workers/: celery_app.py  exchanges.py  outbox_poller.py
(+211 files in other folders)
