[tool.poetry]
name = "payments-platform"
version = "0.1.0"
description = ""
authors = ["kevinle623 <kevinle6231@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.135.2"
uvicorn = {extras = ["standard"], version = "^0.42.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.48"}
alembic = "^1.18.4"
asyncpg = "^0.31.0"
pydantic = {extras = ["email"], version = "^2.12.5"}
celery = {extras = ["redis"], version = "^5.6.3"}
aio-pika = "^9.6.2"
stripe = "^15.0.0"
httpx = "^0.28.1"
python-dotenv = "^1.2.2"
celery-types = "^0.26.0"


[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-asyncio = "^1.3.0"
pytest-cov = "^7.1.0"
anyio = "^4.13.0"
black = "^26.3.1"
isort = "^8.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
